Namespaced the grided elements with grided__* to avoid namespace conflicts when wrapping existing apps

--- a/inst/grided/www/main.css
+++ b/inst/grided/www/main.css
@@ -1,5 +1,5 @@
 /* Styles for my app */
-#grided-holder {
+#grided__holder {
   --side-gaps: 0.7rem;
   --blue: #007bff;
   --light-gray: #9e9e9e;
@@ -28,7 +28,7 @@
 }
 
 /* Styles that apply to every panel in grid */
-#grided-holder > *,
+#grided__holder > *,
 .modal {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: var(--side-gaps);
@@ -61,7 +61,7 @@ img {
   max-height: 100%;
 }
 
-#header {
+#grided__header {
   grid-area: header;
   margin: 0;
   display: flex;
@@ -69,7 +69,7 @@ img {
   align-items: center;
 }
 
-#header > h2 {
+#grided__header > h2 {
   margin: 0;
 }
 
@@ -78,13 +78,13 @@ img {
   align-items: center;
 }
 
-#header button {
+#grided__header button {
   font-size: 1.2rem;
   height: 100%;
   margin-left: 5px;
 }
 
-#settings {
+#grided__settings {
   grid-area: settings;
 }
 
@@ -138,22 +138,22 @@ button.minus_btn.disabled {
   transform: scale(2);
 }
 
-#instructions {
+#grided__instructions {
   grid-area: instructions;
 }
 
 
-#elements {
+#grided__elements {
   grid-area: elements;
 }
 
-#elements button.remove_el {
+#grided__elements button.remove_el {
   background: rgba(255, 255, 255, 0);
   border: none;
   cursor: pointer;
 }
 
-#editor {
+#grided__editor {
   --browser-menu-height: 30px;
   --editor-radius: 10px;
   --outline-color: var(--light-gray);
@@ -336,9 +336,12 @@ button.minus_btn.disabled {
   pointer-events: none;
 }
 
-#added_elements {
+#added_elements,
+#grided__settings > div {
   position: relative;
 }
+
+#grided__settings > div.disabled::after,
 #added_elements.disabled::after{
   content: "Interaction mode on:\AReturn to edit mode to modify elements";
   white-space: break-spaces;
@@ -368,6 +371,8 @@ button.minus_btn.disabled {
   align-content: center;
   padding: 0.5rem;
   pointer-events: none;
+  /* Prevents card styling when set to every child from spilling into input divs */
+  box-shadow: none !important; 
 }
 
 .css-unit-input.with-drag {
